fixed the grid misalignment
right now it's done manually, mostly because I don't know why the grid is shifting in the first place.

--- a/css/pages.layout.css
+++ b/css/pages.layout.css
@@ -53,7 +53,7 @@ DEALINGS IN THE SOFTWARE.
 				width: var(--boxwidth);
 				height: var(--boxheight);
 				display: grid;
-				grid-template-rows: minmax(1em, 4em) 1fr minmax(1em, 4em);
+				grid-template-rows: minmax(1em, 9em) 1fr minmax(1em, 9em);
 				grid-template-columns: 1fr 1fr;
 				justify-content: space-around;
 				grid-gap: 0em;
