--- a/css/ui.webkit.css
+++ b/css/ui.webkit.css
@@ -281,6 +281,7 @@ DEALINGS IN THE SOFTWARE.
 		:target ~ .grid {
 			transform: translate3d(0, 0, 0);
 		}
+
 		#p1:target ~ .grid {
 			transform: translate3d(0, 0, 0);
 		}
@@ -290,169 +291,169 @@ DEALINGS IN THE SOFTWARE.
 		#p3:target ~ .grid {
 			transform: translate3d(calc(-2 * var(--boxwidth)), 0, 0);
 		}
+
 		#p4:target ~ .grid {
-			transform: translate3d(0, calc(-1 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-1.01 * var(--boxheight)), 0);
 		}
 		#p5:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-1 * var(--boxheight)),
+				calc(-1.01 * var(--boxheight)),
 				0
 			);
 		}
 		#p6:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-1 * var(--boxheight)),
+				calc(-1.01 * var(--boxheight)),
 				0
 			);
 		}
 		#p7:target ~ .grid {
-			transform: translate3d(0, calc(-2 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-2.02 * var(--boxheight)), 0);
 		}
 		#p8:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-2 * var(--boxheight)),
+				calc(-2.02 * var(--boxheight)),
 				0
 			);
 		}
 		#p9:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-2 * var(--boxheight)),
+				calc(-2.02 * var(--boxheight)),
 				0
 			);
 		}
 		#p10:target ~ .grid {
-			transform: translate3d(0, calc(-3 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-3.03 * var(--boxheight)), 0);
 		}
 		#p11:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-3 * var(--boxheight)),
+				calc(-3.03 * var(--boxheight)),
 				0
 			);
 		}
 		#p12:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-3 * var(--boxheight)),
+				calc(-3.03 * var(--boxheight)),
 				0
 			);
 		}
 
 		#p13:target ~ .grid {
-			transform: translate3d(0, calc(-4 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-4.035 * var(--boxheight)), 0);
 		}
 
 		#p14:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-4 * var(--boxheight)),
+				calc(-4.035 * var(--boxheight)),
 				0
 			);
 		}
 		#p15:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-4 * var(--boxheight)),
+				calc(-4.035 * var(--boxheight)),
 				0
 			);
 		}
 
 		#p16:target ~ .grid {
-			transform: translate3d(0, calc(-5 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-5.045 * var(--boxheight)), 0);
 		}
 
 		#p17:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-5 * var(--boxheight)),
+				calc(-5.045 * var(--boxheight)),
 				0
 			);
 		}
 		#p18:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-5 * var(--boxheight)),
+				calc(-5.045 * var(--boxheight)),
 				0
 			);
 		}
 
 		#p19:target ~ .grid {
-			transform: translate3d(0, calc(-6 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-6.055 * var(--boxheight)), 0);
 		}
 
 		#p20:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-6 * var(--boxheight)),
+				calc(-6.055 * var(--boxheight)),
 				0
 			);
 		}
 		#p21:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-6 * var(--boxheight)),
+				calc(-6.055 * var(--boxheight)),
 				0
 			);
 		}
 
 		#p22:target ~ .grid {
-			transform: translate3d(0, calc(-7 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-7.06 * var(--boxheight)), 0);
 		}
 
 		#p23:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-7 * var(--boxheight)),
+				calc(-7.06 * var(--boxheight)),
 				0
 			);
 		}
 		#p24:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-7 * var(--boxheight)),
+				calc(-7.06 * var(--boxheight)),
 				0
 			);
 		}
 
 		#p25:target ~ .grid {
-			transform: translate3d(0, calc(-8 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-8.07 * var(--boxheight)), 0);
 		}
 
 		#p26:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-8 * var(--boxheight)),
+				calc(-8.07 * var(--boxheight)),
 				0
 			);
 		}
 		#p27:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-8 * var(--boxheight)),
+				calc(-8.07 * var(--boxheight)),
 				0
 			);
 		}
 
-
 		#p28:target ~ .grid {
-			transform: translate3d(0, calc(-9 * var(--boxheight)), 0);
+			transform: translate3d(0, calc(-9.08 * var(--boxheight)), 0);
 		}
 
 		#p29:target ~ .grid {
 			transform: translate3d(
 				calc(-1 * var(--boxwidth)),
-				calc(-9 * var(--boxheight)),
+				calc(-9.08 * var(--boxheight)),
 				0
 			);
 		}
 		#p30:target ~ .grid {
 			transform: translate3d(
 				calc(-2 * var(--boxwidth)),
-				calc(-9.06 * var(--boxheight)),
+				calc(-9.08 * var(--boxheight)),
 				0
 			);
 		}
@@ -670,7 +671,7 @@ DEALINGS IN THE SOFTWARE.
 		#p27:target ~ .grid > #item1 .focus-page,
 		#p28:target ~ .grid > #item1 .focus-page,
 		#p29:target ~ .grid > #item1 .focus-page,
-		#p30:target ~ .grid > #item1 .focus-page  {
+		#p30:target ~ .grid > #item1 .focus-page {
 			display: block;
 			z-index: 2000;
 		}
@@ -1336,8 +1337,9 @@ DEALINGS IN THE SOFTWARE.
 			width: 300vw;
 			height: 1100vh;
 			display: grid;
-			grid-template: 	repeat(10, var(--boxheight)) var(--gap) /
-							repeat(3,var(--boxwidth));
+			grid-template:
+				repeat(10, var(--boxheight)) var(--gap) /
+				repeat(3, var(--boxwidth));
 			grid-gap: 0.5em;
 		}
 		.footer {
